--- a/.github/workflows/gh-pages-deploy.yml
+++ b/.github/workflows/gh-pages-deploy.yml
@@ -21,3 +21,4 @@ jobs:
           env:
             VUE_APP_SUPABASE_KEY: ${{ secrets.VUE_APP_SUPABASE_KEY }}
             VUE_APP_SUPABASE_URL: ${{ secrets.VUE_APP_SUPABASE_URL }}
+            VUE_APP_TEST: ${{ secrets.VUE_APP_TEST }}
